# 02476-mlops-project

./: .gitignore  .pre-commit-config.yaml  README.md  profile.txt  profile_2.txt  pyproject.toml  temp.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: linting.yaml  tests.yaml
configs/: config.yaml
configs/experiments/: exp1.yaml  exp2.yaml
configs/lightning/: default.yaml
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
models/: model.pth
outputs/2026-01-08/16-18-30/: trained_model.pt
outputs/2026-01-08/16-18-30/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-08/16-22-02/.hydra/: config.yaml  hydra.yaml
src/mlops_project/: data.py  evaluate.py  greetings.py  iris_classifier.py  model.py  model_week3.py  my_logger.py  reproducibility_tester.py  train.py  vae_mnist.py  vae_mnist_bugs.py  visualize.py
src/mlops_project/conf/: sweep.yaml
src/mlops_project/conf/experiments/: exp2.yaml
tests/: test_data.py  test_model.py
