[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mlops_project"
version = "0.0.1"
description = "MLOps course project"
authors = [
  { name = "Otto Schmidt", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.66.0",
    "dvc-gdrive>=3.0.1",
    "gdown>=5.2.0",
    "hydra-core>=1.3.2",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "lightning[pytorch-extra]>=2.6.0",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torch-tb-profiler>=0.4.3",
    "torchvision>=0.24.1",
    "ty>=0.0.9",
    "typer>=0.21.1",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "mkdocstrings-python==1.12.2",
    "ruff>=0.14.10",
]


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.ruff]
line-length = 120
lint.select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]


[project.scripts]
train = "mlops_project.train:train"
greetings = "mlops_project.iris_classifier:app"
